# ms-template

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  dev.Dockerfile  docker-compose-test.yml  docker-compose.yml  justfile  pyproject.toml  ruff.toml
.github/workflows/: build-docker-image-branch.yml  build-docker-image-release.yml  code-linting.yml  test.yml
src/: main.py
src/app/: app.py  main.py
src/app/depends/: auth.py
src/app/logs/: __init__.py  handlers.py
src/app/routers/: __init__.py
src/app/routers/api/: __init__.py  hello_world.py
src/app/services/logs/: __init__.py
src/core/: __init__.py  errors.py  settings_model.py
src/core/database/: __init__.py  registry.py
src/core/logs/: __init__.py  handlers.py
src/schemas/api/: hi.py
src/services/: __init__.py  auth.py  database.py
src/services/logs/: __init__.py
tests/: conftest.py  test_app.py
